--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,84 @@
-# Prerequisites
-*.d
+# Ignore build output
+bin/
+obj/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 
-# Precompiled Headers
-*.gch
-*.pch
+# Mono Auto Generated Files
+mono_crash.*
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
 
-# Fortran module files
-*.mod
-*.smod
+# Folder config file
+Desktop.ini
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Executables
-*.exe
-*.out
-*.app
+# VS Code directories
+.vscode/
+.vscode-test/
+
+# Coverlet Coverage Tool
+coverage*.json
+coverage*.xml
+coverage*.info
+
+# DotNet-CLI tool related
+.dotnet_tool/
+
+# Paket dependency manager
+.paket/
+paket-files/
+
+# FAKE
+.fake/
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# User-specific files (Mono Auto Generated)
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# User-specific files (Visual Studio Code)
+.vscode/*
+
+# .NET Core
+project.lock.json
+project.fragment.lock.json
+artifacts/
+
+# ASP.NET Scaffolding
+ScaffoldingReadMe.txt
+
+# StyleCop
+StyleCopReport.xml
+.stylecop/
+
+# Others
+*~.local.json
+*~.swp
+*~.swo
+*.DS_Store
+*.swp
+*.swo
+.vscode/
+.vscode-test/
+
+# DotNet-CLI tool related
+.dotnet_tool/
+
+# Libman
+libman.json
